Added layout and first pictures

--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
+		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-2017.css">
+		<title>Pictures of my Models</title>
+		<style>
+			a:link {
+				text-decoration: none;
+			}
+
+			a:visited {
+				text-decoration: none;
+			}
+		</style>
+	</head>
+	<body class="w3-2017-shaded-spruce">
+		<div class="w3-container w3-center w3-border-bottom w3-margin-bottom w3-margin-left w3-margin-right">
+			<h1>Pictures of my Models</h1>
+		</div>
+		<div class="w3-row-padding">
+			<div class="w3-quarter">
+                <div class="w3-card w3-hover-shadow">
+                    <a href="models/2_ork_boy_contest/ork_boy.html">
+                        <img src="models/2_ork_boy_contest/cover.jpg" class="w3-image w3-round" alt="Ork Boy Contest Entry">
+                        <div class="w3-container w3-center">
+                            <p>Ork Boy Contest Entry</p>
+                        </div>
+                    </a>
+                </div>
+			</div>
+		</div>
+	</body>
+</html>
