Better columns and all current images

--- a/index.html
+++ b/index.html
@@ -21,14 +21,55 @@
 		</div>
 		<div class="w3-row-padding">
 			<div class="w3-quarter">
-                <div class="w3-card w3-hover-shadow">
-                    <a href="models/2_ork_boy_contest/ork_boy.html">
-                        <img src="models/2_ork_boy_contest/cover.jpg" class="w3-image w3-round" alt="Ork Boy Contest Entry">
-                        <div class="w3-container w3-center">
-                            <p>Ork Boy Contest Entry</p>
-                        </div>
-                    </a>
-                </div>
+				<div class="w3-card w3-hover-shadow">
+					<a href="models/5_bloodletters/album.html">
+						<img src="models/5_bloodletters/cover.jpg" class="w3-image w3-round" alt="Bloodletters">
+						<div class="w3-container w3-center">
+							<p>Bloodletters</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="w3-quarter">
+				<div class="w3-card w3-hover-shadow">
+					<a href="models/4_ork_boyz/album.html">
+						<img src="models/4_ork_boyz/cover.jpg" class="w3-image w3-round" alt="Ork Boyz">
+						<div class="w3-container w3-center">
+							<p>Ork Boyz</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="w3-quarter">
+				<div class="w3-card w3-hover-shadow">
+					<a href="models/3_gretchin/album.html">
+						<img src="models/3_gretchin/cover.jpg" class="w3-image w3-round" alt="Gretchin">
+						<div class="w3-container w3-center">
+							<p>Gretchin</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="w3-quarter">
+				<div class="w3-card w3-hover-shadow">
+					<a href="models/2_ork_boy_contest/album.html">
+						<img src="models/2_ork_boy_contest/cover.jpg" class="w3-image w3-round" alt="Ork Boy Contest Entry">
+						<div class="w3-container w3-center">
+							<p>Ork Boy Contest Entry</p>
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>		<div class="w3-row-padding">
+			<div class="w3-quarter">
+				<div class="w3-card w3-hover-shadow">
+					<a href="models/1_sample_marine/album.html">
+						<img src="models/1_sample_marine/cover.jpg" class="w3-image w3-round" alt="Free Sample Space Marine">
+						<div class="w3-container w3-center">
+							<p>Free Sample Space Marine</p>
+						</div>
+					</a>
+				</div>
 			</div>
 		</div>
 	</body>
