--- a/models/2_ork_boy_contest/album.html
+++ b/models/2_ork_boy_contest/album.html
@@ -20,17 +20,20 @@
 				<i class="fa fa-arrow-left w3-xxxlarge"></i>
 			</a>
 			<h1>Ork Boy Contest Entry</h1>
-			<p>A single Ork Boy entered into a painting contest</p>
+			<p>A single Ork Boy entered into a painting contest. I used the contest to force myself to finish painting a model</p>
 		</div>
 		<div class="w3-row-padding">
 			<div class="w3-third">
-				<img src="1.jpg" class="w3-image w3-round" alt="Ork Boy">
+				<img src="1_1.jpg" class="w3-margin-bottom w3-image w3-round">
+
 			</div>
 			<div class="w3-third">
-				<img src="2.jpg" class="w3-image w3-round" alt="Ork Boy">
+				<img src="2_1.jpg" class="w3-margin-bottom w3-image w3-round">
+
 			</div>
 			<div class="w3-third">
-				<img src="3.jpg" class="w3-image w3-round" alt="Ork Boy">
+				<img src="3_1.jpg" class="w3-margin-bottom w3-image w3-round">
+
 			</div>
 		</div>
 	</body>
