--- a/index.html
+++ b/index.html
@@ -72,5 +72,9 @@
 				</div>
 			</div>
 		</div>
+		<div class="w3-container w3-center w3-border-top w3-margin-top w3-margin-left m3-margin-right">
+			<p>For information about commissions: <a href="mailto:commissions@picturesofmymodels.com">commissions@picturesofmymodels.com</a></p>
+			<p>For anything else: <a href="mailto:info@picturesofmymodels.com">info@picturesofmymodels.com</a></p>
+		</div>
 	</body>
 </html>
