Updated description properly

--- a/models/4_ork_boyz/album.html
+++ b/models/4_ork_boyz/album.html
@@ -20,7 +20,7 @@
 				<i class="fa fa-arrow-left w3-xxxlarge"></i>
 			</a>
 			<h1>Ork Boyz</h1>
-			<p>A squad of Ork Boyz with both heavy weapons, just because they looked cool</p>
+			<p>A squad of Ork Boyz with a rokkit launcher and lots of metal details</p>
 		</div>
 		<div class="w3-row-padding">
 			<div class="w3-third">
