Added new models and colour-corrected all images

--- a/index.html
+++ b/index.html
@@ -22,6 +22,36 @@
 		<div class="w3-row-padding">
 			<div class="w3-quarter">
 				<div class="w3-card w3-hover-shadow">
+					<a href="models/8_khorne_start_collecting/album.html">
+						<img src="models/8_khorne_start_collecting/cover.jpg" class="w3-image w3-round" alt="Khorne Start Collecting">
+						<div class="w3-container w3-center">
+							<p>Khorne Start Collecting</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="w3-quarter">
+				<div class="w3-card w3-hover-shadow">
+					<a href="models/7_bloodcrushers/album.html">
+						<img src="models/7_bloodcrushers/cover.jpg" class="w3-image w3-round" alt="Bloodcrushers">
+						<div class="w3-container w3-center">
+							<p>Bloodcrushers</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="w3-quarter">
+				<div class="w3-card w3-hover-shadow">
+					<a href="models/6_blood_throne/album.html">
+						<img src="models/6_blood_throne/cover.jpg" class="w3-image w3-round" alt="Blood Throne">
+						<div class="w3-container w3-center">
+							<p>Blood Throne</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="w3-quarter">
+				<div class="w3-card w3-hover-shadow">
 					<a href="models/5_bloodletters/album.html">
 						<img src="models/5_bloodletters/cover.jpg" class="w3-image w3-round" alt="Bloodletters">
 						<div class="w3-container w3-center">
@@ -30,6 +60,7 @@
 					</a>
 				</div>
 			</div>
+		</div>		<div class="w3-row-padding">
 			<div class="w3-quarter">
 				<div class="w3-card w3-hover-shadow">
 					<a href="models/4_ork_boyz/album.html">
@@ -60,7 +91,6 @@
 					</a>
 				</div>
 			</div>
-		</div>		<div class="w3-row-padding">
 			<div class="w3-quarter">
 				<div class="w3-card w3-hover-shadow">
 					<a href="models/1_sample_marine/album.html">
