--- a/models/1_sample_marine/album.html
+++ b/models/1_sample_marine/album.html
@@ -20,7 +20,7 @@
 				<i class="fa fa-arrow-left w3-xxxlarge"></i>
 			</a>
 			<h1>Free Sample Space Marine</h1>
-			<p>A single marine I received for free buying hobby supplies. I painted it first as practice</p>
+			<p>A free sample that I painted first as practice</p>
 		</div>
 		<div class="w3-row-padding">
 			<div class="w3-third">
@@ -35,6 +35,12 @@
 				<img src="3_1.jpg" class="w3-margin-bottom w3-image w3-round">
 
 			</div>
+		</div>
+		<div class="w3-container w3-border-top w3-margin-top w3-margin-left w3-margin-right">
+			<h1>Paints Used:</h1>
+			<ul>
+				<li><b>Blue:</b><i> Macragge Blue, Nuln Oil all over, edge highlight Calgar Blue and Fenrisian Grey</i></li>				<li><b>Steel:</b><i> Leadbelcher, Nuln Oil all over, edge hightlight Stormhost Silver</i></li>				<li><b>Gold:</b><i> Retributor Armour, Reikland Fleshshade all over, highlight Auric Armour Gold, edge highlight Liberator Gold</i></li>				<li><b>Black:</b><i> Abaddon Black, edge highlight Eshin Grey and Dawnstone</i></li>				<li><b>Purity Seal Wax:</b><i> Mephiston Red, Agrax Earthshade all over</i></li>				<li><b>Purity Seal Paper:</b><i> Rakarth Flesh, Agrax Earthshade all over</i></li>				<li><b>Eyes:</b><i> Mephiston Red</i></li>				<li><b>Base:</b><i> Dryad Bark dirt, Celestra Grey bones, Mephiston Red banner, Agrax Earthshade all over</i></li>
+			</ul>
 		</div>
 	</body>
 </html>
