--- a/models/3_gretchin/album.html
+++ b/models/3_gretchin/album.html
@@ -20,7 +20,7 @@
 				<i class="fa fa-arrow-left w3-xxxlarge"></i>
 			</a>
 			<h1>Gretchin</h1>
-			<p>Painted these early so I could be sloppier and have something painted, but I ended up taking my time</p>
+			<p>I got these guys so I could be fast and sloppy to learn to paint better, turns out I only take my time</p>
 		</div>
 		<div class="w3-row-padding">
 			<div class="w3-third">
@@ -38,6 +38,12 @@
 				<img src="3_1.jpg" class="w3-margin-bottom w3-image w3-round">
 
 			</div>
+		</div>
+		<div class="w3-container w3-border-top w3-margin-top w3-margin-left w3-margin-right">
+			<h1>Paints Used:</h1>
+			<ul>
+				<li><b>Green:</b><i> Waaagh Flesh, Biel-tan Green all over, highlight Warboss Green and Skarsnik Green</i></li>				<li><b>Steel:</b><i> Leadbelcher, Nuln Oil all over, edge hightlight Stormhost Silver</i></li>				<li><b>Brass:</b><i> Runelord Brass, Nuln Oil all over, highlight Liberator Gold and Auric Armour Gold</i></li>				<li><b>Black:</b><i> Abaddon Black, edge highlight Eshin Grey and Dawnstone</i></li>				<li><b>Leather:</b><i> Dryad Bark, Agrax Earthshade all over, edge highlight Gorthor Brown</i></li>				<li><b>Teeth and Claws:</b><i> Zandri Dust, Seraphim Sepia all over, highlight Ushabti Bone</i></li>				<li><b>Eyes:</b><i> Mephiston Red, Ardcoat</i></li>				<li><b>Checkerboard Pattern:</b><i> Corax White and Abaddon Black, Agrax Earthshade all over, highlight white with Corax White</i></li>				<li><b>Base:</b><i> Stirland Mud, Agrax Earthshade, drybrush Ushabti Bone, Steel Legion Drab rim</i></li>				<li><b>Squig Skin:</b><i> Mephiston Red, Carroburg Crimson all over, second layer of Carroburg Crimson on hair, highlight Evil Sunz Scarlet and Wild Rider Red</i></li>				<li><b>Squig Tongue:</b><i> Screamer Pink, Druchii Violet all over, Ardcoat</i></li>				<li><b>Squig Eyes/Claws:</b><i> Abaddon Black, Ardcoat</i></li>				<li><b>Teeth and Claws:</b><i> Zandri Dust, Seraphim Sepia all over, highlight Ushabti Bone and Screaming Skull</i></li>
+			</ul>
 		</div>
 	</body>
 </html>
