--- a/models/5_bloodletters/album.html
+++ b/models/5_bloodletters/album.html
@@ -20,7 +20,7 @@
 				<i class="fa fa-arrow-left w3-xxxlarge"></i>
 			</a>
 			<h1>Bloodletters</h1>
-			<p>My first attempt at wet-blending colours on the bases of these</p>
+			<p>Pretty proud of these, first attempt at wet-blending on the bases</p>
 		</div>
 		<div class="w3-row-padding">
 			<div class="w3-third">
@@ -38,6 +38,12 @@
 				<img src="3_1.jpg" class="w3-margin-bottom w3-image w3-round">
 
 			</div>
+		</div>
+		<div class="w3-container w3-border-top w3-margin-top w3-margin-left w3-margin-right">
+			<h1>Paints Used:</h1>
+			<ul>
+				<li><b>Skin:</b><i> Mephistion Red, Carroburg Crimson all over, drybrush Evil Sunz Scarlet, Carroburg Crimson again on fins, light drybrush and highlight Wild Rider Red</i></li>				<li><b>Bronze:</b><i> Balthasar Gold, Reikland Fleshshade all over, highlight Sycorax Bronze, minimal edge highlight Stormhost Silver</i></li>				<li><b>Horns:</b><i> Abaddon Black, drybrush Eshin Grey and Dawnstone on tips, all over for leader horns, Arcdoat</i></li>				<li><b>Eyes:</b><i> Vallejo White, Flash Gitz Yellow</i></li>				<li><b>Tongue:</b><i> Screamer Pink, Druchii Violet all over, highlight Pink Horror, Ardcoat</i></li>				<li><b>Teeth:</b><i> Rakarth Flash, Reikland Fleshshade all over, highlight Pallid Wych Flesh</i></li>				<li><b>Gore:</b><i> Khorne Red, Blood for the Blood God</i></li>				<li><b>Skulls:</b><i> Zandri Dust, Seraphim Sepia all over, highlight Ushabti Bone, hightlight bright parts with Screaming Skull</i></li>				<li><b>Sword Hilt:</b><i> Abaddon Grey, highlight Eshin Grey and Dawnstone</i></li>				<li><b>Sword Blade:</b><i> Abaddon Black, alternate wet Mephiston Red and Flash Gitz Yellow on edge, Ardcoat all over</i></li>				<li><b>Sword Tip:</b><i> drybrush Mephiston Red and Flash Gitz Yellow, edge highlight tip with Flash Gitz Yellow, single point of Vallejo White, Ardcoat</i></li>				<li><b>Base Rock:</b><i> Astrogranite, Nuln Oil all over, no highlight to look darker</i></li>				<li><b>Base Lava:</b><i> Mephiston Red, wet blend Mephiston Red and Flash Gitz yellow, very thing Vallejo White over brightest spots</i></li>
+			</ul>
 		</div>
 	</body>
 </html>
