--- a/models/2_ork_boy_contest/album.html
+++ b/models/2_ork_boy_contest/album.html
@@ -20,7 +20,7 @@
 				<i class="fa fa-arrow-left w3-xxxlarge"></i>
 			</a>
 			<h1>Ork Boy Contest Entry</h1>
-			<p>A single Ork Boy entered into a painting contest. I used the contest to force myself to finish painting a model</p>
+			<p>I was still nervous about painting, so I entered a local contest to force myself to finish a model</p>
 		</div>
 		<div class="w3-row-padding">
 			<div class="w3-third">
@@ -35,6 +35,12 @@
 				<img src="3_1.jpg" class="w3-margin-bottom w3-image w3-round">
 
 			</div>
+		</div>
+		<div class="w3-container w3-border-top w3-margin-top w3-margin-left w3-margin-right">
+			<h1>Paints Used:</h1>
+			<ul>
+				<li><b>Green:</b><i> Waaagh Flesh, Biel-tan Green all over, highlight Warboss Green and Skarsnik Green</i></li>				<li><b>Steel:</b><i> Leadbelcher, Nuln Oil all over, edge hightlight Stormhost Silver</i></li>				<li><b>Brass:</b><i> Runelord Brass, Nuln Oil all over, highlight Liberator Gold and Auric Armour Gold</i></li>				<li><b>Black:</b><i> Abaddon Black, edge highlight Eshin Grey and Dawnstone</i></li>				<li><b>Leather:</b><i> Dryad Bark, Agrax Earthshade all over, edge highlight Gorthor Brown</i></li>				<li><b>Teeth and Claws:</b><i> Zandri Dust, Seraphim Sepia all over, highlight Ushabti Bone</i></li>				<li><b>Eyes:</b><i> Mephiston Red, Ardcoat</i></li>				<li><b>Hair:</b><i> Corax White and Abaddon Black, Agrax Earthshade all over, highlight white with Corax White</i></li>				<li><b>Base:</b><i> Stirland Mud, Agrax Earthshade, drybrush Ushabti Bone, Steel Legion Drab rim</i></li>
+			</ul>
 		</div>
 	</body>
 </html>
