--- a/models/4_ork_boyz/album.html
+++ b/models/4_ork_boyz/album.html
@@ -20,7 +20,7 @@
 				<i class="fa fa-arrow-left w3-xxxlarge"></i>
 			</a>
 			<h1>Ork Boyz</h1>
-			<p>A squad of Ork Boyz with a rokkit launcher and lots of metal details</p>
+			<p>A squad of Ork Boyz. Again, bought them to be sloppy and learn to paint, but ended up trying hard</p>
 		</div>
 		<div class="w3-row-padding">
 			<div class="w3-third">
@@ -38,6 +38,12 @@
 				<img src="3_2.jpg" class="w3-margin-bottom w3-image w3-round">
 
 			</div>
+		</div>
+		<div class="w3-container w3-border-top w3-margin-top w3-margin-left w3-margin-right">
+			<h1>Paints Used:</h1>
+			<ul>
+				<li><b>Green:</b><i> Waaagh Flesh, Biel-tan Green all over, highlight Warboss Green and Skarsnik Green</i></li>				<li><b>Steel:</b><i> Leadbelcher, Nuln Oil all over, edge hightlight Stormhost Silver</i></li>				<li><b>Brass:</b><i> Runelord Brass, Nuln Oil all over, highlight Liberator Gold and Auric Armour Gold</i></li>				<li><b>Black:</b><i> Abaddon Black, edge highlight Eshin Grey and Dawnstone</i></li>				<li><b>Leather:</b><i> Dryad Bark, Agrax Earthshade all over, edge highlight Gorthor Brown</i></li>				<li><b>Bone/Teeth/Claws:</b><i> Zandri Dust, Seraphim Sepia all over, highlight Ushabti Bone and Screaming Skull</i></li>				<li><b>Lenses:</b><i> Corax White, Coelia Greenshade/Carroburg Crimson, second layer of shade along the bottom, dot of Corax White in the top, Arcdoat</i></li>				<li><b>Eyes:</b><i> Mephiston Red, Ardcoat</i></li>				<li><b>Base:</b><i> Stirland Mud, Agrax Earthshade, drybrush Ushabti Bone, Steel Legion Drab rim</i></li>
+			</ul>
 		</div>
 	</body>
 </html>
