Uploaded Trukk, Skeleton Warriors and Intercessors

--- a/index.html
+++ b/index.html
@@ -22,6 +22,36 @@
 		<div class="w3-row-padding">
 			<div class="w3-quarter">
 				<div class="w3-card w3-hover-shadow">
+					<a href="models/11_intercessors/album.html">
+						<img src="models/11_intercessors/cover.jpg" class="w3-image w3-round" alt="Space Marine Intercessors">
+						<div class="w3-container w3-center">
+							<p>Space Marine Intercessors</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="w3-quarter">
+				<div class="w3-card w3-hover-shadow">
+					<a href="models/10_skeleton_warriors/album.html">
+						<img src="models/10_skeleton_warriors/cover.jpg" class="w3-image w3-round" alt="Skeleton Warriors">
+						<div class="w3-container w3-center">
+							<p>Skeleton Warriors</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="w3-quarter">
+				<div class="w3-card w3-hover-shadow">
+					<a href="models/9_trukk/album.html">
+						<img src="models/9_trukk/cover.jpg" class="w3-image w3-round" alt="Trukk">
+						<div class="w3-container w3-center">
+							<p>Trukk</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="w3-quarter">
+				<div class="w3-card w3-hover-shadow">
 					<a href="models/8_khorne_start_collecting/album.html">
 						<img src="models/8_khorne_start_collecting/cover.jpg" class="w3-image w3-round" alt="Khorne Start Collecting">
 						<div class="w3-container w3-center">
@@ -30,6 +60,7 @@
 					</a>
 				</div>
 			</div>
+		</div>		<div class="w3-row-padding">
 			<div class="w3-quarter">
 				<div class="w3-card w3-hover-shadow">
 					<a href="models/7_bloodcrushers/album.html">
@@ -60,7 +91,6 @@
 					</a>
 				</div>
 			</div>
-		</div>		<div class="w3-row-padding">
 			<div class="w3-quarter">
 				<div class="w3-card w3-hover-shadow">
 					<a href="models/4_ork_boyz/album.html">
@@ -71,6 +101,7 @@
 					</a>
 				</div>
 			</div>
+		</div>		<div class="w3-row-padding">
 			<div class="w3-quarter">
 				<div class="w3-card w3-hover-shadow">
 					<a href="models/3_gretchin/album.html">
