Added Krieg and Powerwolf

--- a/index.html
+++ b/index.html
@@ -22,8 +22,28 @@
 		<div class="w3-row-padding">
 			<div class="w3-quarter">
 				<div class="w3-card w3-hover-shadow">
+					<a href="models/13_powerwolf_board_game/album.html">
+						<img src="models/13_powerwolf_board_game/cover.jpg" class="w3-image w3-round w3-block" alt="Powerwolf Figures">
+						<div class="w3-container w3-center">
+							<p>Powerwolf Figures</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="w3-quarter">
+				<div class="w3-card w3-hover-shadow">
+					<a href="models/12_veteran_guardsmen/album.html">
+						<img src="models/12_veteran_guardsmen/cover.jpg" class="w3-image w3-round w3-block" alt="Veteran Guardsmen Kill Team">
+						<div class="w3-container w3-center">
+							<p>Veteran Guardsmen Kill Team</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="w3-quarter">
+				<div class="w3-card w3-hover-shadow">
 					<a href="models/11_intercessors/album.html">
-						<img src="models/11_intercessors/cover.jpg" class="w3-image w3-round" alt="Space Marine Intercessors">
+						<img src="models/11_intercessors/cover.jpg" class="w3-image w3-round w3-block" alt="Space Marine Intercessors">
 						<div class="w3-container w3-center">
 							<p>Space Marine Intercessors</p>
 						</div>
@@ -33,17 +53,18 @@
 			<div class="w3-quarter">
 				<div class="w3-card w3-hover-shadow">
 					<a href="models/10_skeleton_warriors/album.html">
-						<img src="models/10_skeleton_warriors/cover.jpg" class="w3-image w3-round" alt="Skeleton Warriors">
+						<img src="models/10_skeleton_warriors/cover.jpg" class="w3-image w3-round w3-block" alt="Skeleton Warriors">
 						<div class="w3-container w3-center">
 							<p>Skeleton Warriors</p>
 						</div>
 					</a>
 				</div>
 			</div>
+		</div>		<div class="w3-row-padding">
 			<div class="w3-quarter">
 				<div class="w3-card w3-hover-shadow">
 					<a href="models/9_trukk/album.html">
-						<img src="models/9_trukk/cover.jpg" class="w3-image w3-round" alt="Trukk">
+						<img src="models/9_trukk/cover.jpg" class="w3-image w3-round w3-block" alt="Trukk">
 						<div class="w3-container w3-center">
 							<p>Trukk</p>
 						</div>
@@ -53,18 +74,17 @@
 			<div class="w3-quarter">
 				<div class="w3-card w3-hover-shadow">
 					<a href="models/8_khorne_start_collecting/album.html">
-						<img src="models/8_khorne_start_collecting/cover.jpg" class="w3-image w3-round" alt="Khorne Start Collecting">
+						<img src="models/8_khorne_start_collecting/cover.jpg" class="w3-image w3-round w3-block" alt="Khorne Start Collecting">
 						<div class="w3-container w3-center">
 							<p>Khorne Start Collecting</p>
 						</div>
 					</a>
 				</div>
 			</div>
-		</div>		<div class="w3-row-padding">
 			<div class="w3-quarter">
 				<div class="w3-card w3-hover-shadow">
 					<a href="models/7_bloodcrushers/album.html">
-						<img src="models/7_bloodcrushers/cover.jpg" class="w3-image w3-round" alt="Bloodcrushers">
+						<img src="models/7_bloodcrushers/cover.jpg" class="w3-image w3-round w3-block" alt="Bloodcrushers">
 						<div class="w3-container w3-center">
 							<p>Bloodcrushers</p>
 						</div>
@@ -74,17 +94,18 @@
 			<div class="w3-quarter">
 				<div class="w3-card w3-hover-shadow">
 					<a href="models/6_blood_throne/album.html">
-						<img src="models/6_blood_throne/cover.jpg" class="w3-image w3-round" alt="Blood Throne">
+						<img src="models/6_blood_throne/cover.jpg" class="w3-image w3-round w3-block" alt="Blood Throne">
 						<div class="w3-container w3-center">
 							<p>Blood Throne</p>
 						</div>
 					</a>
 				</div>
 			</div>
+		</div>		<div class="w3-row-padding">
 			<div class="w3-quarter">
 				<div class="w3-card w3-hover-shadow">
 					<a href="models/5_bloodletters/album.html">
-						<img src="models/5_bloodletters/cover.jpg" class="w3-image w3-round" alt="Bloodletters">
+						<img src="models/5_bloodletters/cover.jpg" class="w3-image w3-round w3-block" alt="Bloodletters">
 						<div class="w3-container w3-center">
 							<p>Bloodletters</p>
 						</div>
@@ -94,18 +115,17 @@
 			<div class="w3-quarter">
 				<div class="w3-card w3-hover-shadow">
 					<a href="models/4_ork_boyz/album.html">
-						<img src="models/4_ork_boyz/cover.jpg" class="w3-image w3-round" alt="Ork Boyz">
+						<img src="models/4_ork_boyz/cover.jpg" class="w3-image w3-round w3-block" alt="Ork Boyz">
 						<div class="w3-container w3-center">
 							<p>Ork Boyz</p>
 						</div>
 					</a>
 				</div>
 			</div>
-		</div>		<div class="w3-row-padding">
 			<div class="w3-quarter">
 				<div class="w3-card w3-hover-shadow">
 					<a href="models/3_gretchin/album.html">
-						<img src="models/3_gretchin/cover.jpg" class="w3-image w3-round" alt="Gretchin">
+						<img src="models/3_gretchin/cover.jpg" class="w3-image w3-round w3-block" alt="Gretchin">
 						<div class="w3-container w3-center">
 							<p>Gretchin</p>
 						</div>
@@ -115,17 +135,18 @@
 			<div class="w3-quarter">
 				<div class="w3-card w3-hover-shadow">
 					<a href="models/2_ork_boy_contest/album.html">
-						<img src="models/2_ork_boy_contest/cover.jpg" class="w3-image w3-round" alt="Ork Boy Contest Entry">
+						<img src="models/2_ork_boy_contest/cover.jpg" class="w3-image w3-round w3-block" alt="Ork Boy Contest Entry">
 						<div class="w3-container w3-center">
 							<p>Ork Boy Contest Entry</p>
 						</div>
 					</a>
 				</div>
 			</div>
+		</div>		<div class="w3-row-padding">
 			<div class="w3-quarter">
 				<div class="w3-card w3-hover-shadow">
 					<a href="models/1_sample_marine/album.html">
-						<img src="models/1_sample_marine/cover.jpg" class="w3-image w3-round" alt="Free Sample Space Marine">
+						<img src="models/1_sample_marine/cover.jpg" class="w3-image w3-round w3-block" alt="Free Sample Space Marine">
 						<div class="w3-container w3-center">
 							<p>Free Sample Space Marine</p>
 						</div>
