--- a/models/11_intercessors/album.html
+++ b/models/11_intercessors/album.html
@@ -12,6 +12,9 @@
 				top: 0px;
 				left: 0px;
 			}
+			#modalImage {
+				width: 100%;
+			}
 		</style>
 	</head>
 	<body class="w3-2017-shaded-spruce">
@@ -24,16 +27,16 @@
 		</div>
 		<div class="w3-row-padding">
 			<div class="w3-third">
-				<img src="1_1.jpg" class="w3-margin-bottom w3-image w3-round">
-				<img src="1_2.jpg" class="w3-margin-bottom w3-image w3-round">
+				<img src="1_1.jpg" class="w3-margin-bottom w3-image w3-round" onclick="showImage(this)">
+				<img src="1_2.jpg" class="w3-margin-bottom w3-image w3-round" onclick="showImage(this)">
 
 			</div>
 			<div class="w3-third">
-				<img src="2_1.jpg" class="w3-margin-bottom w3-image w3-round">
+				<img src="2_1.jpg" class="w3-margin-bottom w3-image w3-round" onclick="showImage(this)">
 
 			</div>
 			<div class="w3-third">
-				<img src="3_1.jpg" class="w3-margin-bottom w3-image w3-round">
+				<img src="3_1.jpg" class="w3-margin-bottom w3-image w3-round" onclick="showImage(this)">
 
 			</div>
 		</div>
@@ -43,5 +46,16 @@
 				<li><b>Blue Armour:</b><i> Macragge Blue, Nuln Oil in recesses, edge highlight Calgar Blue, Fenrisian Grey on the sharpest points</i></li>				<li><b>Red Helmet:</b><i> Khorne Red, Nuln Oil in recesses, edge highlight Evil Sunz Scarlet and Wild Rider Red</i></li>				<li><b>Steel:</b><i> Leadbelcher, Nuln Oil all over, edge hightlight Stormhost Silver</i></li>				<li><b>Gold:</b><i> Retributor Armour, Reikland Fleshshade all over, highlight Liberator Gold</i></li>				<li><b>Black:</b><i> Abaddon Black, edge highlight Eshin Grey and Dawnstone</i></li>				<li><b>Leather:</b><i> Dryad Bark, Agrax Earthshade all over, edge highlight Gorthor Brown</i></li>				<li><b>Purity Seal Wax:</b><i> Screamer Pink, Carroburg Crimson all over, highlight Pink Horror</i></li>				<li><b>Purity Seal Paper:</b><i> Rakarth Flesh, Seraphim Sepia all over, highlight Pallid Wych Flesh, Dryad Bark text</i></li>				<li><b>Skin:</b><i> Rakarth Flesh, Reikland Fleshshade all over, highlight Flayed One Flesh and Pallid Wych Flesh</i></li>				<li><b>Eyes:</b><i> Vallejo White, Abaddon Black</i></li>				<li><b>Hair:</b><i> Dryad Bark, Agrax Earthshade all over, edge highlight Gorthor Brown</i></li>				<li><b>Mouth:</b><i> Screamer Pink tongue, glaze Screamer Pink over lips</i></li>				<li><b>Armour Eye Lenses:</b><i> Mephiston Red</i></li>				<li><b>Base:</b><i> Astrogranite, Nuln Oil all over, drybrush Screaming Skull, Steel Legion Drab rim</i></li>
 			</ul>
 		</div>
+
+		<div id="imageModal" class="w3-modal" onclick="this.style.display='none'">
+			<img class="w3-modal-content w3-block" id="modalImage">
+		</div>
+
+		<script>
+			function showImage(image) {
+				document.getElementById("modalImage").src = image.src;
+				document.getElementById("imageModal").style.display = "block";
+			}
+		</script>
 	</body>
 </html>
