--- a/models/1_sample_marine/album.html
+++ b/models/1_sample_marine/album.html
@@ -12,6 +12,9 @@
 				top: 0px;
 				left: 0px;
 			}
+			#modalImage {
+				width: 100%;
+			}
 		</style>
 	</head>
 	<body class="w3-2017-shaded-spruce">
@@ -24,15 +27,15 @@
 		</div>
 		<div class="w3-row-padding">
 			<div class="w3-third">
-				<img src="1_1.jpg" class="w3-margin-bottom w3-image w3-round">
+				<img src="1_1.jpg" class="w3-margin-bottom w3-image w3-round" onclick="showImage(this)">
 
 			</div>
 			<div class="w3-third">
-				<img src="2_1.jpg" class="w3-margin-bottom w3-image w3-round">
+				<img src="2_1.jpg" class="w3-margin-bottom w3-image w3-round" onclick="showImage(this)">
 
 			</div>
 			<div class="w3-third">
-				<img src="3_1.jpg" class="w3-margin-bottom w3-image w3-round">
+				<img src="3_1.jpg" class="w3-margin-bottom w3-image w3-round" onclick="showImage(this)">
 
 			</div>
 		</div>
@@ -42,5 +45,16 @@
 				<li><b>Blue:</b><i> Macragge Blue, Nuln Oil all over, edge highlight Calgar Blue and Fenrisian Grey</i></li>				<li><b>Steel:</b><i> Leadbelcher, Nuln Oil all over, edge hightlight Stormhost Silver</i></li>				<li><b>Gold:</b><i> Retributor Armour, Reikland Fleshshade all over, highlight Auric Armour Gold, edge highlight Liberator Gold</i></li>				<li><b>Black:</b><i> Abaddon Black, edge highlight Eshin Grey and Dawnstone</i></li>				<li><b>Purity Seal Wax:</b><i> Mephiston Red, Agrax Earthshade all over</i></li>				<li><b>Purity Seal Paper:</b><i> Rakarth Flesh, Agrax Earthshade all over</i></li>				<li><b>Eyes:</b><i> Mephiston Red</i></li>				<li><b>Base:</b><i> Dryad Bark dirt, Celestra Grey bones, Mephiston Red banner, Agrax Earthshade all over</i></li>
 			</ul>
 		</div>
+
+		<div id="imageModal" class="w3-modal" onclick="this.style.display='none'">
+			<img class="w3-modal-content w3-block" id="modalImage">
+		</div>
+
+		<script>
+			function showImage(image) {
+				document.getElementById("modalImage").src = image.src;
+				document.getElementById("imageModal").style.display = "block";
+			}
+		</script>
 	</body>
 </html>
